@@ -1,0 +1,3 @@
+jobs:
+  - name: local
+    dsn: PH_NETDATA_DB_USER:PH_NETDATA_DB_PASSWORD@tcp(PH_MYSQL_SERVER_ADDRESS:PH_MYSQL_SERVER_PORT)/
