@@ -1,0 +1,4 @@
+jobs:
+  - name: local
+    url: https://127.0.0.1/stub_status
+    tls_skip_verify: yes
