@@ -1,6 +1,0 @@
-tcp:
-    name: 'local'
-    host: 'PH_MYSQL_SERVER_ADDRESS'
-    port: 'PH_MYSQL_SERVER_PORT'
-    user: 'PH_NETDATA_DB_USER'
-    pass: 'PH_NETDATA_DB_PASSWD'
