@@ -1,14 +1,0 @@
-localhost:
-  name : 'local'
-  url  : "https://localhost/status?full&json"
-  ss_cert   : yes
-
-localipv4:
-  name : 'local'
-  url  : "https://127.0.0.1/status?full&json"
-  ss_cert   : yes
-
-localipv6:
-  name : 'local'
-  url  : "https://[::1]/status?full&json"
-  ss_cert   : yes
