@@ -2,6 +2,10 @@ iRedMail-1.0:
     * Supports new distribution release:
         + OpenBSD 6.6
 
+    * Improvements:
+        - Netdata: Use Go instead of Python modules to collect data for better
+          performance.
+
     * Fixed issues:
         - Timeout for clamd service to load virus database is too short on
           CentOS 7.
